--- a/manifests/app.yaml
+++ b/manifests/app.yaml
@@ -26,6 +26,7 @@ spec:
         - containerPort: 8080
         securityContext:
           allowPrivilegeEscalation: false
+          runAsNonRoot: true
           capabilities:
             drop:
             - ALL
