--- a/manifests/app.yaml
+++ b/manifests/app.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
       - env:
         - name: COW_COLOR
-          value: white
+          value: red
         name: demo
         image: brooksphilip/rancher-demo-navlink
         ports:
